# dep-diet

./: Cargo.toml  README.md  SPEC.md
.github/workflows/: test.yml
src/: alternatives.rs  analyzer.rs  main.rs  registry.rs  report.rs  unused.rs
tests/: integration.rs
